[package]
name = "xkcp-sys"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "cshake"
harness = false
