[package]
name = "xkcp-sys"
version = "0.1.0"
authors = ["David Wong <davidwg@calibra.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
ring = "0.16.9"
sha2 = "0.8.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"

[features]
default = []
generic64lc = []
haswell = []
nehalem = []
sandybridge = []
bulldozer = []
skylakex = []

[[bench]]
name = "cshake"
harness = false

[[bench]]
name = "sha2"
harness = false
